--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -14,6 +14,14 @@
 			<h1>This is great</h1>
 			<p>Welcome to templating using EJS</p>
 		</div>
+                <h2>Variable</h2>
+                <p><%= tagline %></p>
+                <h2>Loop</h2>
+                <ul> 
+			<% drinks.forEach(function(drink) { %>
+			<li><%= drink.name %> - <%= drink.drunkness %></li>
+			<% }); %>
+                </ul>
 	</main>
 
 	<footer>
