--- a/public/views/index.html
+++ b/public/views/index.html
@@ -16,11 +16,11 @@
     <script src="libs/angular-route/angular-route.min.js"></script>
 
     <!-- ANGULAR CUSTOM -->
-    <script src="js/controllers/MainCtrl.js"></script>
-    <script src="js/controllers/NerdCtrl.js"></script>
-    <script src="js/services/NerdService.js"></script>
-    <script src="js/appRoutes.js"></script>
-    <script src="js/app.js"></script>
+    <script src="javascripts/controllers/MainCtrl.js"></script>
+    <script src="javascripts/controllers/NerdCtrl.js"></script>
+    <script src="javascripts/services/NerdService.js"></script>
+    <script src="javascripts/appRoutes.js"></script>
+    <script src="javascripts/app.js"></script>
 </head>
 <body ng-app="sampleApp" ng-controller="NerdController">
 <div class="container">
@@ -33,6 +33,8 @@
 
         <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
         <ul class="nav navbar-nav">
+            <li><a href="/users">Users</a></li>
+            <li><a href="/geeks">Geeks</a></li>
             <li><a href="/nerds">Nerds</a></li>
         </ul>
     </nav>
