--- a/public/views/user.html
+++ b/public/views/user.html
@@ -1,7 +1,7 @@
 <!-- public/views/nerd.html -->
 
 <div class="jumbotron text-center">
-    <h1>Geeks and Proud</h1>
+    <h1>Users</h1>
 
     <p>{{ tagline }}</p>
 </div>
