added fb signin

--- a/public/modules/core/views/header.client.view.html
+++ b/public/modules/core/views/header.client.view.html
@@ -1,3 +1,8 @@
+<!--
+this view is included by server side layout.server.view.html. it shows navigation bar in header
+menu items, subitems are added to navigation bar, it uses ui-route for state routing service as
+well as simple path routing, based on authentication of user it shows menus, submenus 
+-->
 <div class="container" data-ng-controller="HeaderController">
 	<div class="navbar-header">
 		<button class="navbar-toggle" type="button" data-ng-click="toggleCollapsibleMenu()">
