--- a/public/modules/donation/views/create-donation.client.view.html
+++ b/public/modules/donation/views/create-donation.client.view.html
@@ -1,11 +1,11 @@
-<section data-ng-controller="ArticlesController">
+<section data-ng-controller="DonationController">
 	<div class="page-header">
-		<h1>New Article</h1>
+		<h1>Make a Donation</h1>
 	</div>
 	<div class="col-md-12">
-		<form name="articleForm" class="form-horizontal" data-ng-submit="create()" novalidate>
+		<form name="donationForm" class="form-horizontal" data-ng-submit="create()" novalidate>
 			<fieldset>
-				<div class="form-group" ng-class="{ 'has-error': articleForm.title.$dirty && articleForm.title.$invalid }">
+				<div class="form-group" ng-class="{ 'has-error': donationForm.title.$dirty && donationForm.title.$invalid }">
 					<label class="control-label" for="title">Title</label>
 					<div class="controls">
 						<input name="title" type="text" data-ng-model="title" id="title" class="form-control" placeholder="Title" required>
@@ -17,6 +17,12 @@
 						<textarea name="content" data-ng-model="content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
 					</div>
 				</div>
+				<div class="form-group">
+					select food type
+					<select ng-model="types.type" ng-options="obj.id as obj.name for obj in types.options">				
+					</select>
+					<div>{{types.type}}</div>
+				</div>				
 				<div class="form-group">
 					<input type="submit" class="btn btn-default">
 				</div>
