--- a/public/modules/donation/views/create-donation.client.view.html
+++ b/public/modules/donation/views/create-donation.client.view.html
@@ -5,24 +5,67 @@
 	<div class="col-md-12">
 		<form name="donationForm" class="form-horizontal" data-ng-submit="create()" novalidate>
 			<fieldset>
-				<div class="form-group" ng-class="{ 'has-error': donationForm.title.$dirty && donationForm.title.$invalid }">
-					<label class="control-label" for="title">Title</label>
-					<div class="controls">
-						<input name="title" type="text" data-ng-model="title" id="title" class="form-control" placeholder="Title" required>
-					</div>
-				</div>
-				<div class="form-group">
-					<label class="control-label" for="content">Content</label>
-					<div class="controls">
-						<textarea name="content" data-ng-model="content" id="content" class="form-control" cols="30" rows="10" placeholder="Content"></textarea>
-					</div>
-				</div>
 				<div class="form-group">
 					select food type
-					<select ng-model="types.type" ng-options="obj.id as obj.name for obj in types.options">				
+					<select ng-model="types.type" ng-options="obj.id as obj.name for obj in types.options" id="food_type">				
 					</select>
-					<div>{{types.type}}</div>
+					<!--div>{{types.type}}</div -->
+				</div>
+				<div class="form-group">
+					select food state
+					<select ng-model="states.state" ng-options="obj.id as obj.name for obj in states.options" id="food_state">				
+					</select>
+					<!--div>{{states.state}}</div-->
 				</div>				
+				<div class="form-group">
+					Best Before
+				   <input type="date" id="bestbefore" name="input" ng-model="bestbefore_date" placeholder="yyyy-MM-dd" min="1970-01-01" max="2070-12-31" required />				   
+				</div>		
+				<!--div>Timestamp: {{now}}</div-->	
+				<div class="form-group">
+					<label for="food_amount">Food Amount</label>
+					<div>
+						<input name="food_amount" type="text" data-ng-model="food_amount" id="food_amount" class="form-control" placeholder="Please enter food amount" required>
+					</div>
+				</div>
+				<div>
+					Needs refrigeration:
+ 					<input type="checkbox" ng-model="refrigeration" ng-true-value="yes" ng-false-value="no" id="need_ref">
+ 					<div>{{refrigeration}}</div>
+ 				</div>	 	
+				<div class="form-group">
+					Available from
+				   <input type="date" id="avail_from" name="input" ng-model="avail_from_date" placeholder="yyyy-MM-dd" min="1970-01-01" max="2070-12-31" required />				   
+				   to
+				   <input type="date" id="avail_to" name="input" ng-model="avail_to_date" placeholder="yyyy-MM-dd" min="1970-01-01" max="2070-12-31" required />				   				   
+				</div>		
+				<!--div>Timestamp: {{avail_from_date}}  {{avail_to_date}}</div-->	
+				<div class="form-group">
+					<label class="control-label" for="desc">Description</label>
+					<div class="controls">
+						<textarea name="desc" data-ng-model="desc" id="desc" class="form-control" cols="30" rows="10" placeholder="Please enter some description"></textarea>
+					</div>
+					<!--div>{{desc}}</div-->
+				</div>
+				<div>
+					Show my contact number:
+ 					<input type="checkbox" ng-model="show_contact_num" ng-true-value="Y" ng-false-value="N" ng-checked="true" id="show_cont_num">
+ 					<!--div>{{show_contact_num}}</div-->
+ 				</div>	 
+				<div>
+					Allow chat with me:
+ 					<input type="checkbox" ng-model="allow_chat" ng-true-value="Y" ng-false-value="N" ng-checked="true" id="allow_chat">
+ 					<!--div>{{allow_chat}}</div-->
+ 				</div>
+
+				<div class="form-group">
+					<label for="auto_assign">Duration before expiry auto assignment should start</label>
+					<div>
+						<input name="auto_assign" type="text" data-ng-model="auto_assign" id="auto_assign" class="form-control" placeholder="Please provide duration before expiry auto assignment should start" required>
+					</div>
+ 					<!--div>{{auto_assign}}</div-->					
+				</div>
+
 				<div class="form-group">
 					<input type="submit" class="btn btn-default">
 				</div>
