--- a/public/modules/organization/views/list-articles.client.view.html
+++ b/public/modules/organization/views/list-articles.client.view.html
@@ -2,6 +2,18 @@
 	<div class="page-header">
 		<h1>Organization</h1>
 	</div>
+	<div class="page-header">
+		<h1>About</h1>
+	</div>
+
+
+	<div class="list-group" ng-show="authentication">
+		<div class="page-header">
+			<h1>About</h1>
+		</div>		
+	</div>
+
+
 	<div class="list-group">
 		<a data-ng-repeat="article in articles" data-ng-href="#!/articles/{{article._id}}" class="list-group-item">
 			<small class="list-group-item-text">
