donation creation, edit, deletion basic working, dates from model are not loaded in view while editing

--- a/public/modules/donation/views/create-donation.client.view.html
+++ b/public/modules/donation/views/create-donation.client.view.html
@@ -59,11 +59,11 @@
  				</div>
 
 				<div class="form-group">
-					<label for="auto_assign">Duration before expiry auto assignment should start</label>
+					<label for="durationAA">Duration before expiry auto assignment should start</label>
 					<div>
-						<input name="auto_assign" type="text" data-ng-model="auto_assign" id="auto_assign" class="form-control" placeholder="Please provide duration before expiry auto assignment should start" required>
+						<input name="durationAA" type="text" data-ng-model="durationAA" id="durationAA" class="form-control" placeholder="Please provide duration before expiry auto assignment should start" required>
 					</div>
- 					<!--div>{{auto_assign}}</div-->					
+ 					<!--div>{{durationAA}}</div-->					
 				</div>
 
 				<div class="form-group">
