--- a/public/modules/articles/views/edit-article.client.view.html
+++ b/public/modules/articles/views/edit-article.client.view.html
@@ -14,6 +14,15 @@
 						<p ng-show="articleForm.title.$error.required" class="text-danger">Title is required</p>
 					</div>
 				</div>
+
+				<div class="form-group" ng-class="{ 'has-error': articleForm.title.$dirty && articleForm.title.$invalid }">
+					<label class="control-label" for="title">Title</label>
+					<div class="controls">
+						<input name="title" type="text" data-ng-model="title" id="title" class="form-control" placeholder="Title" required>
+					</div>
+				</div>
+
+				
 				<div class="form-group" ng-class="{ 'has-error' : submitted && articleForm.content.$invalid}">
 					<label class="control-label" for="content">Content</label>
 					<div class="controls">
