--- a/public/modules/donation/views/view-donation.client.view.html
+++ b/public/modules/donation/views/view-donation.client.view.html
@@ -1,6 +1,6 @@
 <section data-ng-controller="DonationController" data-ng-init="findOne()">
 	<div class="page-header">
-		<h1 data-ng-bind="donation.title"></h1>
+		<h1>Food available</h1>
 	</div>
 	<div class="pull-right" data-ng-show="authentication.user._id == donation.user._id">
 		<a class="btn btn-primary" href="/#!/donation/{{donation._id}}/edit">
@@ -12,11 +12,11 @@
 	</div>
 	<small>
 		<em class="text-muted">
-			Posted on
+			Posted for donation on
 			<span data-ng-bind="donation.created | date:'mediumDate'"></span>
 			by
 			<span data-ng-bind="donation.user.displayName"></span>
 		</em>
 	</small>
-	<p class="lead" data-ng-bind="donation.content"></p>
+	<p class="lead" data-ng-bind="donation.desc"></p>
 </section>
