--- a/public/modules/users/views/settings/edit-profile.client.view.html
+++ b/public/modules/users/views/settings/edit-profile.client.view.html
@@ -1,24 +1,85 @@
-<section class="row" data-ng-controller="SettingsController">
-	<h3 class="col-md-12 text-center">Edit your profile</h3>
-	<div class="col-xs-offset-2 col-xs-8 col-md-offset-5 col-md-2">
+<section class="" data-ng-controller="SettingsController">
+	<h3 class="text-center">Edit your profile</h3>
+	<div class="row">
 		<form name="userForm" data-ng-submit="updateUserProfile(userForm.$valid)" class="signin form-horizontal" autocomplete="off">
 			<fieldset>
 				<div class="form-group">
-					<label for="firstName">First Name</label>
-					<input type="text" id="firstName" name="firstName" class="form-control" data-ng-model="user.firstName" placeholder="First Name">
+					<label for="username" class="col-sm-2 control-label">Username</label>
+					<div class="col-sm-6">
+						<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
+					</div>
 				</div>
 				<div class="form-group">
-					<label for="lastName">Last Name</label>
-					<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="user.lastName" placeholder="Last Name">
+					
+					<label for="firstName" class="col-sm-2 control-label">First Name</label>
+					<div class="col-sm-6">
+						<input type="text" id="firstName" name="firstName" class="form-control" data-ng-model="user.firstName" placeholder="First Name">
+					</div>
 				</div>
 				<div class="form-group">
-					<label for="email">Email</label>
-					<input type="email" id="email" name="email" class="form-control" data-ng-model="user.email" placeholder="Email">
+					<label for="lastName" class="col-sm-2 control-label">Last Name</label>
+					<div class="col-sm-6">
+						<input type="text" id="lastName" name="lastName" class="form-control" data-ng-model="user.lastName" placeholder="Last Name">
+					</div>
 				</div>
 				<div class="form-group">
-					<label for="username">Username</label>
-					<input type="text" id="username" name="username" class="form-control" data-ng-model="user.username" placeholder="Username">
+					<label for="email" class="col-sm-2 control-label">Email</label>
+					<div class="col-sm-6">
+						<input type="email" id="email" name="email" class="form-control" data-ng-model="user.email" placeholder="Email">
+					</div>
 				</div>
+
+				<div class="form-group">
+					<label for="address" class="col-sm-2 control-label">Address</label>
+					<div class="col-sm-6">
+						<input type="text" id="address" name="address" class="form-control" data-ng-model="user.email" placeholder="Address	">
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="phone-number" class="col-sm-2 control-label">Phone Number</label>
+					<div class="col-sm-6">
+						<input type="text" id="phoneNumber" name="phoneNumber" class="form-control" data-ng-model="user.phoneNumber">
+					</div>
+				</div>
+				<div class="form-group">
+					<h4 class="col-sm-8">Edit your Communication settings</h4>
+				</div>
+
+				<div class="form-group">
+
+					<div class="input-group">
+					  <span class="input-group-addon">
+					    <input type="checkbox" data-ng-model="user.showNumToNeedy" >
+					  </span>
+					  <label class="form-control">Show my contact number to needy</label>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="input-group">
+					  <span class="input-group-addon">
+					    <input type="checkbox" data-ng-model="user.allowChat" >
+					  </span>
+					  <label class="form-control">Allow Chat With Me</label>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="input-group">
+					  <span class="input-group-addon">
+					    <input type="checkbox" data-ng-model="user.alwaysDonor" >
+					  </span>
+					  <label class="form-control">Always Donor</label>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="input-group">
+					  <span class="input-group-addon">
+					    <input type="checkbox" data-ng-model="user.alwaysOrganization" >
+					  </span>
+					  <label class="form-control">Always food acceptor</label>
+					</div>
+				</div>
+
 				<div class="text-center form-group">
 					<button type="submit" class="btn btn-large btn-primary">Save Profile</button>
 				</div>
@@ -31,4 +92,5 @@
 			</fieldset>
 		</form>
 	</div>
+    
 </section>
